# rev-xbgas-runtime

./: .gitignore  BUILD.sh  CMakeLists.txt  README
include/: malloc.h  xbrtime-alloc.h  xbrtime-api.h  xbrtime-atomics.h  xbrtime-version.h  xbrtime.h
src/: CMakeLists.txt  xbrtime_api.c  xbrtime_atomics.c  xbrtime_atomics_asm.s  xbrtime_barrier.c  xbrtime_init.c  xbrtime_util_asm.s
src/xbgas-runtime/: CMakeLists.txt  print.c  print.h  xbrtime-collectives.h  xbrtime-macros.h  xbrtime-malloc.h  xbrtime-print.h  xbrtime-types.h  xbrtime.h  xbrtime_alloc.c  xbrtime_api.c  xbrtime_api_asm.s  xbrtime_broadcast.c  xbrtime_gather.c  xbrtime_init.c  xbrtime_malloc.c  xbrtime_print.c  xbrtime_util.c  xbrtime_util_asm.s
test/: CMakeLists.txt
test/alloc/: CMakeLists.txt  Makefile  alloc_test_1.c  alloc_test_2.c  alloc_test_3.c  alloc_test_4.c  alloc_test_KF_1.c  alloc_test_KF_2.c
test/alloc/testBin/: alloc_test_1  alloc_test_2  alloc_test_3  alloc_test_4  alloc_test_KF_1  alloc_test_KF_2  rev-xbgas-isa.py
test/amo/: CMakeLists.txt  Makefile  amo_add_test_1.c  amo_add_test_2.c  amo_cas_test_0.c  amo_cas_test_1.c  amo_cas_test_2.c  amo_gendata.pl  amo_genidx.pl  dataset1.h  idx1.h  rev-xbrtime-test.py  run_xbrtime_test.sh
test/bulk_xfer/: CMakeLists.txt  Makefile  bulk_get.c  bulk_get_nb.c  bulk_put.c  bulk_put_nb.c  rev-xbrtime-test.py  run_xbrtime_test.sh
test/collective/: CMakeLists.txt  collect_alltoall_test_1.c  collect_broadcast_subset_test_1.c  collect_broadcast_test_1.c  collect_gather_subset_test_1.c  collect_gather_test_1.c  collect_reduce_test_1.c  collect_scatter_test_1.c
test/collective/testBin/: StatisticOutput_0.csv  StatisticOutput_1.csv  StatisticOutput_2.csv  StatisticOutput_3.csv  rev-xbgas-coll.py  rev-xbgas-isa.py
test/init/: CMakeLists.txt  init_test_1.c  init_test_2.c  init_test_3.c  init_test_4.c  init_test_5.c
test/init/testBin/: init_test_1  init_test_2  init_test_3  init_test_4  init_test_5  rev-xbgas-isa.py
test/xfer/: CMakeLists.txt  rev-xbrtime-test.py  xfer_get_test_1.c  xfer_get_test_2.c  xfer_get_test_3.c  xfer_get_test_4.c  xfer_get_test_5.c  xfer_grot_test_1.c  xfer_grot_test_2.c  xfer_grot_test_3.c  xfer_grot_test_4.c  xfer_grot_test_5.c  xfer_prot_test_1.c  xfer_prot_test_2.c  xfer_prot_test_3.c  xfer_prot_test_4.c  xfer_prot_test_5.c  xfer_put_test_1.c  xfer_put_test_2.c  xfer_put_test_3.c  xfer_put_test_4.c  xfer_put_test_5.c
test/xfer/testBin/: StatisticOutput.csv  rev-xbgas-isa.py  xfer_get_test_1  xfer_get_test_2  xfer_get_test_3  xfer_get_test_4  xfer_get_test_5  xfer_grot_test_1  xfer_grot_test_2  xfer_grot_test_3  xfer_grot_test_4  xfer_grot_test_5  xfer_prot_test_1  xfer_prot_test_2  xfer_prot_test_3  xfer_prot_test_4  xfer_prot_test_5  xfer_put_test_1  xfer_put_test_2  xfer_put_test_3  xfer_put_test_4  xfer_put_test_5
